--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "require-dev": {
-        "phpunit/phpunit": "^9.5"
+      "phpunit/phpunit": "^9.5",
+      "ext-pdo": "*"
     },
     "autoload": {
         "psr-4": {
